themes/affiche/assets/css/style.css
/* ... */
@media (min-width: 1280px) {
  .xl\:absolute {
    position: absolute;
  }

  .xl\:inset-y-0 {
    top: 0px;
    bottom: 0px;
  }

  .xl\:right-1\/2 {
    right: 50%;
  }

  .xl\:ml-0 {
    margin-left: 0px;
  }

  .xl\:w-1\/2 {
    width: 50%;
  }

  .xl\:justify-end {
    justify-content: flex-end;
  }
}

@media (prefers-color-scheme: dark) {
  .dark\:border-zinc-700\/40 {
    border-color: rgb(63 63 70 / 0.4);
  }

  .dark\:bg-zinc-800 {
    --tw-bg-opacity: 1;
    background-color: rgb(39 39 42 / var(--tw-bg-opacity));
  }

  .dark\:text-zinc-100 {
    --tw-text-opacity: 1;
    color: rgb(244 244 245 / var(--tw-text-opacity));
  }

  .dark\:text-zinc-200 {
    --tw-text-opacity: 1;
    color: rgb(228 228 231 / var(--tw-text-opacity));
  }

  .dark\:text-zinc-400 {
    --tw-text-opacity: 1;
    color: rgb(161 161 170 / var(--tw-text-opacity));
  }

  .dark\:hover\:text-teal-500:hover {
    --tw-text-opacity: 1;
    color: rgb(20 184 166 / var(--tw-text-opacity));
  }
}

